--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
     "allowJs": true,
     "moduleResolution": "node",
     // Для абсолютного импорта
-    //"baseUrl": ".",
+    "baseUrl": ".",
+    "paths": {
+      // "*": ["./src/*"],
+      "@/*": ["./src/*"]
+    },
     // esModuleInterop позволяет работать с пакетами, которые используют
     // common js как с обычными пакета с помощью import (require() module.export) = common js
     // import Moment from 'moment';
@@ -34,5 +38,5 @@
     "compilerOptions": {
       "module": "CommonJS"
     }
-  }
+  },
 }
